# tanmatsu-hhgg

./: .gitignore  CLAUDE.md  Makefile  README.md  convert_all.sh  convert_video.sh  convert_video_mjpeg.sh
main/: CMakeLists.txt  audio_player.c  audio_player.h  avi_parser.c  avi_parser.h  graphics.cpp  hershey.h  hershey_font.h  idf_component.yml  main.c  media_loader.c  media_loader.h  mjpeg_decoder.c  mjpeg_decoder.h  model.cpp  renderer.c  renderer.cpp  renderer.h  ui_draw.c  ui_draw.h  ui_menu.c  ui_menu.h  video_decoder.c  video_decoder.h  yuv_convert.c  yuv_convert.h
sdcard/at.cavac.hhgg/: alcohol.aac  alcohol.h264  babelfish.aac  dontpanic.avi  earth.aac  earth.avi  earth.h264  playlist.json  poetry.aac  poetry.h264
sdkconfigs/: tanmatsu
videos/: playlist.json
