idf_component_register(
	SRCS
		"main.c"
		"ui_draw.c"
		"ui_menu.c"
		"media_loader.c"
		"video_decoder.c"
		"audio_player.c"
		"yuv_convert.c"
		"usb_device.c"
		"sdcard.c"
	PRIV_REQUIRES
		esp_lcd
		badge-bsp
		fatfs
		sdmmc
		esp_driver_sdmmc
		esp_driver_sdspi
		esp_driver_spi
		esp_driver_i2s
		esp_driver_ppa
		json
		vfs
	INCLUDE_DIRS
		"."
)
