idf_component_register(
	SRCS
		"main.c"
		"ui_draw.c"
		"ui_menu.c"
		"media_loader.c"
		"mjpeg_decoder.c"
		"avi_parser.c"
		"audio_player.c"
		"usb_device.c"
		"sdcard.c"
		"fastopen.c"
	PRIV_REQUIRES
		esp_lcd
		badge-bsp
		fatfs
		sdmmc
		esp_driver_sdmmc
		esp_driver_sdspi
		esp_driver_spi
		esp_driver_i2s
		esp_driver_jpeg
		json
		vfs
	INCLUDE_DIRS
		"."
)
